--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 /* Reset CSS */
 * {
-
+    
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 html{
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
@@ -52,6 +53,12 @@ html{
 .pull-right{
     float: right !important;
 } 
+
+.hidden {
+    display: none;
+}
+
+
 /* Main */
 #main{
 
@@ -77,6 +84,7 @@ html{
     position: relative;
 }
 #nav li a{
+    display: block;
     padding: 0 16px;
     line-height: 46px;
     color: white;
@@ -87,9 +95,12 @@ html{
 }
 #nav .subnav li:hover ,
 #nav > li:hover > a{
-    display: inline-block;
+    display: block;
     color: black;
     background-color: #ccc;
+}
+#nav:first-child > a{
+    display: inline-block;
 }
 #nav li:hover .subnav{
     display: block;
@@ -112,15 +123,27 @@ html{
 #nav .nav-arrow-down{
     font-size: 12px;
 }
-.search-button{
+
+.menu-button{
+    padding: 12px 24px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+#header .search-button{
     height: 100%;
     float:right;
     padding: 12px 24px;
 }
+.menu-button:hover{
+    background-color: #ccc;
+    color: #000;
+}
 .search-button:hover{
+    cursor: pointer;
     background-color: #f00;
 }
-.search-icon{
+.icon{
     font-size: 18px;
     color: #fff;
 }
@@ -258,7 +281,7 @@ html{
 }
 
 .place-content{
-    display: inline-block;
+    display: block;
     background-color: #fff;
     padding: 0 16px;
     font-size: 15px;
@@ -267,7 +290,7 @@ html{
 .place-content .place-heading{
     font-size: 15px;
     font-weight: 600;
-    margin: 15px 0 ;
+    padding: 15px 0;
 }
 
 .place-content .place-time{
@@ -362,26 +385,22 @@ html{
 .modal-container{
     position: relative;
     animation: modalFadeIn ease .5s;
+    width: 800px;
+    min-height: 200px;
+    margin: auto;
+    background-color: #fff;
 }
 
 .modal-close {
     position: absolute;
     color: #fff;
     padding: 16px;
-    top: 0;
-    right: 0;
     cursor: pointer;
+    right: 0;
 }
 .modal-close:hover{
     background-color: #ccc;
     color: #000;
-}
-
-.modal-container{
-    width: 900px;
-    min-height: 200px;
-    margin: auto;
-    background-color: #fff;
 }
 
 .modal-body {
@@ -438,3 +457,4 @@ html{
         transform: translateY(0);
     }
 }
+
